[gd_scene load_steps=4 format=3 uid="uid://vg3uvj5ph8fn"]

[ext_resource type="Script" path="res://ui/menuprincipal/Menu.gd" id="1_6hd4u"]
[ext_resource type="Texture2D" uid="uid://yimfbs37p8rp" path="res://ui/menuprincipal/JanelaB.png" id="2_y0oaf"]
[ext_resource type="Theme" uid="uid://dcdrfxnryxp3c" path="res://ui/theme/MainTheme.tres" id="3_3hi4f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hd4u")

[node name="Fundo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.835294, 0.552941, 0.407843, 1)

[node name="Janela" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1e-05)

[node name="Jan" type="TextureRect" parent="Janela"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -175.0
offset_right = 150.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 175)
texture = ExtResource("2_y0oaf")

[node name="Comecar" type="Button" parent="Janela"]
layout_mode = 0
offset_left = -63.0
offset_top = -78.0
offset_right = 98.0
offset_bottom = -36.0
pivot_offset = Vector2(379, -33)
theme = ExtResource("3_3hi4f")
shortcut_in_tooltip = false
text = "COMEÇAR"

[node name="Continuar" type="Button" parent="Janela"]
layout_mode = 0
offset_left = -63.0
offset_top = -19.0
offset_right = 98.0
offset_bottom = 23.0
pivot_offset = Vector2(379, -33)
theme = ExtResource("3_3hi4f")
shortcut_in_tooltip = false
text = "CONTINUAR"

[node name="Opcoes" type="Button" parent="Janela"]
layout_mode = 0
offset_left = -61.0
offset_top = 43.0
offset_right = 100.0
offset_bottom = 85.0
pivot_offset = Vector2(379, -33)
theme = ExtResource("3_3hi4f")
shortcut_in_tooltip = false
text = "OPÇÕES"

[node name="Sair" type="Button" parent="Janela"]
layout_mode = 0
offset_left = -62.0
offset_top = 101.0
offset_right = 99.0
offset_bottom = 143.0
pivot_offset = Vector2(379, -33)
theme = ExtResource("3_3hi4f")
shortcut_in_tooltip = false
text = "SAIR"

[connection signal="focus_entered" from="Janela/Comecar" to="." method="_on_button_focus_entered" binds= ["Comecar"]]
[connection signal="focus_exited" from="Janela/Comecar" to="." method="_on_button_focus_exited" binds= ["Comecar"]]
[connection signal="mouse_entered" from="Janela/Comecar" to="." method="_on_button_mouse_entered" binds= ["Comecar"]]
[connection signal="mouse_exited" from="Janela/Comecar" to="." method="_on_button_mouse_exited" binds= ["Comecar"]]
[connection signal="pressed" from="Janela/Comecar" to="." method="_on_comecar_pressed"]
[connection signal="focus_entered" from="Janela/Continuar" to="." method="_on_button_focus_entered" binds= ["Continuar"]]
[connection signal="focus_exited" from="Janela/Continuar" to="." method="_on_button_focus_exited" binds= ["Continuar"]]
[connection signal="mouse_entered" from="Janela/Continuar" to="." method="_on_button_mouse_entered" binds= ["Continuar"]]
[connection signal="mouse_exited" from="Janela/Continuar" to="." method="_on_button_mouse_exited" binds= ["Continuar"]]
[connection signal="pressed" from="Janela/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="focus_entered" from="Janela/Opcoes" to="." method="_on_button_focus_entered" binds= ["Opcoes"]]
[connection signal="focus_exited" from="Janela/Opcoes" to="." method="_on_button_focus_exited" binds= ["Opcoes"]]
[connection signal="mouse_entered" from="Janela/Opcoes" to="." method="_on_button_mouse_entered" binds= ["Opcoes"]]
[connection signal="mouse_exited" from="Janela/Opcoes" to="." method="_on_button_mouse_exited" binds= ["Opcoes"]]
[connection signal="pressed" from="Janela/Opcoes" to="." method="_on_opcoes_pressed"]
[connection signal="focus_entered" from="Janela/Sair" to="." method="_on_button_focus_entered" binds= ["Sair"]]
[connection signal="focus_exited" from="Janela/Sair" to="." method="_on_button_focus_exited" binds= ["Sair"]]
[connection signal="mouse_entered" from="Janela/Sair" to="." method="_on_button_mouse_entered" binds= ["Sair"]]
[connection signal="mouse_exited" from="Janela/Sair" to="." method="_on_button_mouse_exited" binds= ["Sair"]]
[connection signal="pressed" from="Janela/Sair" to="." method="_on_sair_pressed"]
